# Nexus

./: .env.example  .firebaserc  .gitignore  README.md  firebase.json  netlify.toml  package-lock.json  package.json  render.yaml
apps/api/: Dockerfile  alembic.ini  pyproject.toml
apps/api/alembic/: env.py
apps/api/alembic/versions/: 20260702_0001_initial_schema.py  20260706_0002_firebase_identity.py  20260713_0003_user_sessions.py  20260713_0004_workspace_collaboration.py
apps/api/app/: __init__.py  main.py
apps/api/app/core/: config.py  request_limits.py  security.py  security_headers.py
apps/api/app/domain/: progress.py
apps/api/app/models/: __init__.py  account_action_token.py  ai_insight.py  journal.py  milestone.py  project_blueprint.py  task.py  time_entry.py  user.py  workspace.py
apps/api/app/schemas/: analytics.py  auth.py  common.py  configuration.py  integration.py  planning.py  project.py  task.py
apps/api/app/services/: analytics.py  audit.py  configuration_defaults.py  database_auth.py  database_configuration.py  database_workspace.py  email_delivery.py  local_configuration.py  local_store.py  plans.py  workspace_collaboration.py
apps/api/nexus_api.egg-info/: requires.txt
apps/api/tests/: test_account_controls.py  test_account_recovery.py  test_client_server_boundary.py  test_configuration_state.py  test_database_auth.py  test_execution_intelligence.py  test_firebase_auth.py  test_github_integration.py  test_live_analytics.py  test_local_store.py  test_progress.py  test_rate_limit.py  test_security.py  test_tenant_isolation.py
(+136 files in other folders)
